force-app/main/default/objects/Contact__x/Contact__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>Contact</externalName>
    <label>External Contact</label>
    <pluralLabel>External  Contacts</pluralLabel>
</CustomObject>