force-app/main/default/objects/Contact__x/fields/BankingType__c.field-meta.xml
<CustomField>
    <fullName>BankingType__c</fullName>
    <externalDeveloperName>BankingType</externalDeveloperName>
    <label>Banking Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>