force-app/main/default/objects/Contact__x/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <externalDeveloperName>ContactId</externalDeveloperName>
    <label>Contact</label>
    <length>80</length>
    <referenceTargetField>Contact.GUID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>