force-app/main/default/objects/Contact__x/fields/CountryOfResidency__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidency__c</fullName>
    <externalDeveloperName>CountryOfResidency</externalDeveloperName>
    <label>Country  Of Residency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>