force-app/main/default/objects/Contact__x/fields/EnglishFirstName__c.field-meta.xml
<CustomField>
    <fullName>EnglishFirstName__c</fullName>
    <externalDeveloperName>EnglishFirstName</externalDeveloperName>
    <label>English First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>