force-app/main/default/objects/Contact__x/fields/EnglishLastName__c.field-meta.xml
<CustomField>
    <fullName>EnglishLastName__c</fullName>
    <externalDeveloperName>EnglishLastName</externalDeveloperName>
    <label>English Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>