force-app/main/default/objects/Contact__x/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <externalDeveloperName>MaritalStatus</externalDeveloperName>
    <label>Marital Status</label>
    <length>24</length>
    <type>Text</type>
</CustomField>