force-app/main/default/objects/Contact__x/fields/WeddingDate__c.field-meta.xml
<CustomField>
    <fullName>WeddingDate__c</fullName>
    <externalDeveloperName>WeddingDate</externalDeveloperName>
    <label>Wedding Date</label>
    <type>Date</type>
</CustomField>